[package]
name = "cryptocurrency-kit"
version = "0.1.0"
authors = ["Rg <daimaldd@gmail.com>"]

[dependencies]
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
bincode = "*"
failure = "0.1.1"
hex = { git = "https://github.com/KokaKiwi/rust-hex.git"}
sha3 = "0.7.3"
byteorder = { version = "1", default-features = false }
chrono = { version = "0.4.5", features = ["serde"] }
uuid = { version = "0.6.0", features = ["serde"] }
rmp = "*"
rmp-serde  = "*"
keccak-hash = "*"
ethereum-types = "*"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
lazy_static = "1.0"
rand = "0.4"
tiny-keccak = "1.4"
rustc-hex = "2.0.1"
parity-crypto = "*"
rust_decimal = "*"
